// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip test > Tooltip with contentInterpolation prop 1`] = `
.c4 {
  margin-top: var(--bezier-text-margin-top);
  margin-right: var(--bezier-text-margin-right);
  margin-bottom: var(--bezier-text-margin-bottom);
  margin-left: var(--bezier-text-margin-left);
  font-size: var(--bezier-text-font-size);
  font-style: var(--bezier-text-font-style);
  font-weight: var(--bezier-text-font-weight);
  line-height: var(--bezier-text-line-height);
  color: var(--bezier-text-font-color);
  -webkit-letter-spacing: var(--bezier-text-letter-spacing);
  -moz-letter-spacing: var(--bezier-text-letter-spacing);
  -ms-letter-spacing: var(--bezier-text-letter-spacing);
  letter-spacing: var(--bezier-text-letter-spacing);
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c0 {
  position: relative;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1000000000;
}

.c2 {
  box-sizing: border-box;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 260px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  padding: 8px 14px;
  color: #FFFFFFCC;
  word-break: normal;
  word-wrap: break-word;
  background-color: #313234;
  box-shadow: inset 0 0 2px 0 #FFFFFF14, 0 0 2px 1px #00000014, 0 2px 6px #00000026;
  overflow: hidden;
  border-radius: 8px;
  background-color: black;
}

.c3 {
  display: -webkit-box;
  max-height: 36rem;
  overflow: hidden;
  line-height: 1.8rem;
  text-overflow: ellipsis;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 20;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="bezier-react-tooltip"
    >
      Text
    </div>
  </div>
  <div
    class="c1"
    style="position: fixed; top: 4px; left: 0px; transform: translate(-50%, 0%);"
  >
    <div
      class="c2"
      data-testid="bezier-react-tooltip-content"
    >
      <div
        class="c3"
      >
        <span
          class="c4"
          style="--bezier-text-font-size: 1.4rem; --bezier-text-line-height: 1.8rem; --bezier-text-letter-spacing: normal; --bezier-text-font-style: normal; --bezier-text-font-weight: normal; --bezier-text-font-color: inherit; --bezier-text-margin-top: 0px; --bezier-text-margin-right: 0px; --bezier-text-margin-bottom: 0px; --bezier-text-margin-left: 0px;"
        >
          Hovered
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Tooltip test > Tooltip with default props 1`] = `
.c4 {
  margin-top: var(--bezier-text-margin-top);
  margin-right: var(--bezier-text-margin-right);
  margin-bottom: var(--bezier-text-margin-bottom);
  margin-left: var(--bezier-text-margin-left);
  font-size: var(--bezier-text-font-size);
  font-style: var(--bezier-text-font-style);
  font-weight: var(--bezier-text-font-weight);
  line-height: var(--bezier-text-line-height);
  color: var(--bezier-text-font-color);
  -webkit-letter-spacing: var(--bezier-text-letter-spacing);
  -moz-letter-spacing: var(--bezier-text-letter-spacing);
  -ms-letter-spacing: var(--bezier-text-letter-spacing);
  letter-spacing: var(--bezier-text-letter-spacing);
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c0 {
  position: relative;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1000000000;
}

.c2 {
  box-sizing: border-box;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 260px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  padding: 8px 14px;
  color: #FFFFFFCC;
  word-break: normal;
  word-wrap: break-word;
  background-color: #313234;
  box-shadow: inset 0 0 2px 0 #FFFFFF14, 0 0 2px 1px #00000014, 0 2px 6px #00000026;
  overflow: hidden;
  border-radius: 8px;
}

.c3 {
  display: -webkit-box;
  max-height: 36rem;
  overflow: hidden;
  line-height: 1.8rem;
  text-overflow: ellipsis;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 20;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="bezier-react-tooltip"
    >
      Text
    </div>
  </div>
  <div
    class="c1"
    style="position: fixed; top: 4px; left: 0px; transform: translate(-50%, 0%);"
  >
    <div
      class="c2"
      data-testid="bezier-react-tooltip-content"
    >
      <div
        class="c3"
      >
        <span
          class="c4"
          style="--bezier-text-font-size: 1.4rem; --bezier-text-line-height: 1.8rem; --bezier-text-letter-spacing: normal; --bezier-text-font-style: normal; --bezier-text-font-weight: normal; --bezier-text-font-color: inherit; --bezier-text-margin-top: 0px; --bezier-text-margin-right: 0px; --bezier-text-margin-bottom: 0px; --bezier-text-margin-left: 0px;"
        >
          Hovered
        </span>
      </div>
    </div>
  </div>
</body>
`;
